Applied new dropdown style to all pages + spacing fix for Account dropdown

--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,6 @@
 * {
 	margin: 0;
 	padding: 0;
-/*	border: 0;
-	outline: 0;
-	background: transparent; */
 	font-family: verdana;
 	font-size: 100%;
 	vertical-align: baseline;
@@ -52,12 +49,11 @@ p {
 .menu-dropdown-content2{
 	/* display: none; */
 	font-size: 17px;
-	/* text-align: left; */
+	/*text-align: left;*/
 	position: absolute;
 	background-color: #f9f9f9;
-	min-width: 100px;
+	min-width: 90px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	
 }
 
 .menu-dropdown-content3{
@@ -83,17 +79,6 @@ p {
 }
 .dropdown li{
 	padding-bottom: 10px;
-}
-
-.SecondDropDown li{
-	display:none;
-}
-.SecondDropDown:hover li{
-	display:block;
-	position:relative;
-	padding-top: 10px;
-	background-color: #4cb5f5;
-
 }
 
 nav {
